Added new man images to testimonial sliders

--- a/_factory_testimonial_sliders.html
+++ b/_factory_testimonial_sliders.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Blank Template for Bootstrap</title>
+        <title>Testimonial Sliders</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom styles for this template -->
@@ -16,7 +16,7 @@
     <body>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
-                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-slider-1</p>
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-slider-1 (all sliders need glide.min.js, functions-sliders.js, and glide.core.min.css)</p>
             </div>
         </section>
         <section class="pd-testimonial-slider-1" style="position: relative;" id="pd-testimonial-slider-1">
@@ -145,8 +145,8 @@
                                             <footer class="pd-testimonial-slider-2-author">
                                                 <div>
                                                     <picture>
-                                                        <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
-                                                        <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="140" height="140">
+                                                        <source srcset="/images/uploads/testimonial-man.webp" type="image/webp">
+                                                        <img src="/images/uploads/testimonial-man.jpg" alt="image of testimonial author" width="140" height="140">
                                                     </picture>
                                                 </div>
                                                 <div style="display: flex; flex-direction: column; justify-content: center;" class="ps-2">
@@ -249,8 +249,8 @@
                                             <footer class="pd-testimonial-slider-3-author">
                                                 <div>
                                                     <picture>
-                                                        <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
-                                                        <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="140" height="140">
+                                                        <source srcset="/images/uploads/testimonial-man.webp" type="image/webp">
+                                                        <img src="/images/uploads/testimonial-man.jpg" alt="image of testimonial author" width="140" height="140">
                                                     </picture>
                                                 </div>
                                                 <div style="display: flex; flex-direction: column; justify-content: center;" class="ps-2">
@@ -345,14 +345,14 @@
                                         <article class="align-items-start d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start pe-2 ps-2">
                                             <div class="flex-grow-1 flex-shrink-0 p-4 pd-testimonial-slider-4-bubble position-relative">
                                                 <div>
-                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec finibus enim. Donec ut facilisis arcu. Nunc quis dignissim felis. Nulla volutpat ultrices odio, quis laoreet urna convallis vitae. Aliquam eget finibus felis, luctus iaculis liberoPraesent pharetra risus pharetra orci.</p>
+                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec finibus enim. Donec ut facilisis arcu. Nunc quis dignissim felis. Nulla volutpat ultrices odio.</p>
                                                 </div>
                                                 <img alt="arrow point down for testimonial" width="30" height="30" style="position: absolute; bottom: -22px;" src="images/design-assets/icon-testimonial-arrow-white.svg"/>
                                             </div>
                                             <footer class="align-items-center d-flex flex-row justify-content-start mt-3 pd-testimonial-slider-4-author-wrapper">
                                                 <picture>
-                                                    <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
-                                                    <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="100" height="100">
+                                                    <source srcset="/images/uploads/testimonial-man.webp" type="image/webp">
+                                                    <img src="/images/uploads/testimonial-man.jpg" alt="image of testimonial author" width="100" height="100">
                                                 </picture>
                                                 <div class="p-2">
                                                     <h3 class="mb-0">Client Name</h3>
@@ -426,8 +426,8 @@
                                             </div>
                                             <footer class="align-items-center d-flex flex-row justify-content-start mt-3 pd-testimonial-slider-5-author-wrapper">
                                                 <picture>
-                                                    <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
-                                                    <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="100" height="100">
+                                                    <source srcset="/images/uploads/testimonial-man.webp" type="image/webp">
+                                                    <img src="/images/uploads/testimonial-man.jpg" alt="image of testimonial author" width="100" height="100">
                                                 </picture>
                                                 <div class="p-2">
                                                     <h3 class="mb-0">Client Name</h3>
@@ -485,6 +485,110 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-slider-6</p>
+            </div>
+        </section>
+        <section class="pd-testimonial-slider-6" style="position: relative;" id="pd-testimonial-slider-6">
+            <div class="pd-testimonial-slider-6-image-wrapper">
+                <picture>
+                    <source srcset="/images/uploads/hero-testimonials.webp 1800w, 
+                                    /images/uploads/hero-testimonials-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp">
+                    <img srcset="/images/uploads/hero-testimonials.jpg 1800w,
+                                /images/uploads/hero-testimonials-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-testimonials.jpg" loading="lazy"/>
+                </picture>
+            </div>
+            <div class="pd-testimonial-slider-6-overlay"></div>
+            <header class="container pb-4">
+                <div class="row">
+                    <div class="col pb-3 text-center">
+                        <h2 class="text-center">Testimonials</h2> 
+                    </div>
+                </div>
+            </header>
+            <article class="container">
+                <div class="row">
+                    <div class="col" style="position: relative;">
+                        <div class="glide" data-glide='{
+                            "type": "carousel", 
+                            "startAt": 0, 
+                            "perView": 1,
+                            "breakpoints": {
+                                "1023": {"perView": 1},
+                                "2000": {"perView": 2},
+                                "5200": {"perView": 3}
+                            }
+                               
+                        }' style="position: relative;">
+                            <div class="glide__track " data-glide-el="track">
+                                <ul class="glide__slides">
+                                    <li class="align-items-start d-flex flex-column flex-grow-1 flex-shrink-0 glide__slide justify-content-start">
+                                        <article class="align-items-start d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start pe-2 ps-2">
+                                            <div class="flex-grow-1 flex-shrink-0 p-4 pd-testimonial-slider-6-bubble position-relative">
+                                                <div>
+                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec finibus enim. Donec ut facilisis arcu. Nunc quis dignissim felis. Nulla volutpat ultrices odio, quis laoreet urna convallis vitae. </p>
+                                                </div>
+                                                <img alt="arrow point down for testimonial" width="30" height="30" style="position: absolute; bottom: -22px;" src="images/design-assets/icon-testimonial-arrow-white.svg"/>
+                                            </div>
+                                            <footer class="align-items-center d-flex flex-row justify-content-start mt-3 pd-testimonial-slider-6-author-wrapper">
+                                                <picture>
+                                                    <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
+                                                    <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="100" height="100">
+                                                </picture>
+                                                <div class="p-2">
+                                                    <h3 class="mb-0">Client Name</h3>
+                                                    <p>Business Name</p>
+                                                </div>
+                                            </footer>
+                                        </article>
+                                    </li>
+                                    <li class="align-items-start d-flex flex-column flex-grow-1 flex-shrink-0 glide__slide justify-content-start">
+                                        <article class="align-items-start d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start pe-2 ps-2">
+                                            <div class="flex-grow-1 flex-shrink-0 p-4 pd-testimonial-slider-6-bubble position-relative">
+                                                <div>
+                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec finibus enim. Donec ut facilisis arcu. Nunc quis dignissim felis. Nulla volutpat ultrices odio, quis laoreet urna convallis vitae. Aenean nec sem quis diam venenatis pulvinar id.</p>
+                                                </div>
+                                                <img alt="arrow point down for testimonial" width="30" height="30" style="position: absolute; bottom: -22px;" src="images/design-assets/icon-testimonial-arrow-white.svg"/>
+                                            </div>
+                                            <footer class="align-items-center d-flex flex-row justify-content-start mt-3 pd-testimonial-slider-6-author-wrapper">
+                                                <picture>
+                                                    <source srcset="/images/uploads/testimonial-man.webp" type="image/webp">
+                                                    <img src="/images/uploads/testimonial-man.jpg" alt="image of testimonial author" width="100" height="100">
+                                                </picture>
+                                                <div class="p-2">
+                                                    <h3 class="mb-0">Client Name</h3>
+                                                    <p>Business Name</p>
+                                                </div>
+                                            </footer>
+                                        </article>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="glide__arrows" data-glide-el="controls">
+                                <button aria-label="button to go back" class="glide__arrow glide__arrow--left pd-testimonial-slider-6-arrowWrapper" data-glide-dir="<">
+                                    <img alt="icon carousel go back" width="30" height="30" src="images/design-assets/carousel-go-back.svg">
+                                </button>
+                                <button aria-label="button to go forward" class="glide__arrow glide__arrow--right pd-testimonial-slider-6-arrowWrapper" data-glide-dir=">">
+                                    <img width="30" height="30" alt="icon advance carousel" src="images/design-assets/carousel-advance.svg">
+                                </button>
+                            </div>
+                            <div class="glide__bullets" data-glide-el="controls[nav]">
+                                <button aria-label="button to go this slide" class="glide__bullet" data-glide-dir="=0"></button>
+                                <button aria-label="button to go this slide" class="glide__bullet" data-glide-dir="=1"></button>
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
+            </article>
+            <footer class="container pb-3 pt-5 text-end">
+                <div class="row">
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-testimonial-slider-6-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-secondary.svg"></span></a> 
+                    </div>
+                </div>
+            </footer>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-slider-7</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
