Added testimonial slider refinements

--- a/_factory_testimonial_sliders.html
+++ b/_factory_testimonial_sliders.html
@@ -37,14 +37,14 @@
                                 <ul class="glide__slides">
                                     <li class="glide__slide">
                                         <article>
-                                            <div class=" pd-testimonial-slider-1-mainText pe-4 pe-lg-5 ps-4 ps-lg-5">
+                                            <div class=" pd-testimonial-slider-1-mainText pe-5 ps-5">
                                                 <div class="pd-testimonial-slider-1-quotation text-center">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ullamcorper justo sed eros sagittis, nec consectetur quam fringilla. Nulla faucibus rhoncus libero, at efficitur diam lobortis a.</p>
                                                 </div>
                                             </div>
-                                            <footer class="pd-testimonial-slider-1-author pe-3 pe-lg-5 ps-3 ps-lg-5">
-                                                <p class="mb-0 text-center text-md-end">Client Name</p>
-                                                <p class="fw-bolder text-center text-md-end">Client Business</p>
+                                            <footer class=" pd-testimonial-slider-1-author pe-5 pe-lg-5 ps-5 ps-lg-5">
+                                                <p class="mb-0 text-center text-lg-end">Client Name</p>
+                                                <p class="fw-bolder text-center text-lg-end">Client Business</p>
                                             </footer>
                                         </article>
                                     </li>
@@ -116,7 +116,7 @@
                                 <ul class="glide__slides">
                                     <li class="glide__slide">
                                         <article>
-                                            <div class="pd-testimonial-slider-2-mainText pe-4 pe-lg-5 ps-4 ps-lg-5">
+                                            <div class=" pd-testimonial-slider-2-mainText pe-5 ps-5">
                                                 <div class="pd-testimonial-slider-2-quotation text-center">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ullamcorper justo sed eros sagittis, nec consectetur quam fringilla. Nulla faucibus rhoncus libero, at efficitur diam lobortis a.</p>
                                                 </div>
@@ -220,7 +220,7 @@
                                 <ul class="glide__slides">
                                     <li class="glide__slide">
                                         <article>
-                                            <div class="pd-testimonial-slider-3-mainText pe-4 pe-lg-5 ps-4 ps-lg-5">
+                                            <div class=" pd-testimonial-slider-3-mainText pe-5 ps-5">
                                                 <div class="pd-testimonial-slider-3-quotation text-center">
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ullamcorper justo sed eros sagittis, nec consectetur quam fringilla. Nulla faucibus rhoncus libero, at efficitur diam lobortis a.</p>
                                                 </div>
@@ -313,7 +313,7 @@
                             "startAt": 0, 
                             "perView": 1,
                             "breakpoints": {
-                                "1023": {"perView": 1},
+                                "1000": {"perView": 1},
                                 "2000": {"perView": 2},
                                 "5200": {"perView": 3}
                             }
@@ -408,7 +408,7 @@
                             "startAt": 0, 
                             "perView": 1,
                             "breakpoints": {
-                                "1023": {"perView": 1},
+                                "1000": {"perView": 1},
                                 "2000": {"perView": 2},
                                 "5200": {"perView": 3}
                             }
@@ -512,7 +512,7 @@
                             "startAt": 0, 
                             "perView": 1,
                             "breakpoints": {
-                                "1023": {"perView": 1},
+                                "1000": {"perView": 1},
                                 "2000": {"perView": 2},
                                 "5200": {"perView": 3}
                             }
