--- a/_factory_testimonial_sliders.html
+++ b/_factory_testimonial_sliders.html
@@ -594,9 +594,9 @@
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/popper.min.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-        <script src="assets/js/glide.min.js"></script>
+        <script src="/assets/js/popper.min.js"></script>
+        <script src="/bootstrap/js/bootstrap.min.js"></script>
+        <script src="/assets/js/glide.min.js"></script>
         <script src="/assets/js/functions-sliders.js"></script>
     </body>
 </html>
