Added new info graphic for the homepage

--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -287,6 +287,47 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-8</p>
             </div>
         </section>
+        <section class="pb-5 pd-section-8 pt-5">
+            <div class="container">
+                <div class="row">
+                    <header class="col text-center">
+                        <h2>Why we made Scissors</h2> 
+                        <div class="pd-section-8-headline">
+                            <p><strong>Scissors was built to bring people together</strong></p>
+                        </div>
+                        <div class="pd-section-8-subHeadline">
+                            <p>Etiam ullamcorper, lacus sit amet consequat pulvinar, dolor mi accumsan risus, venenatis fringilla metus dui vitae magna. Duis ut semper ex, at luctus magna. Nam et molestie justo.</p>
+                        </div>                         
+                    </header>
+                </div>
+            </div>
+            <div class="container pb-4 pt-4">
+                <div class="row">
+                    <div class="col">
+                        <div class="align-items-center d-flex flex-column justify-content-start pd-section-8-image-wrapper pe-0 pe-lg-5 ps-0 ps-lg-5">
+                            <picture>
+                                <source srcset="/images/uploads/scissors-infographic.webp 1920w, 
+                                                /images/uploads/scissors-infographic-mob.webp 820w" sizes="(max-width: 600px) calc(100vw - 24px), 1920px" type="image/webp">
+                                <img srcset="/images/uploads/scissors-infographic.png 1920w,
+                                            /images/uploads/scissors-infographic-mob.png 820w" sizes="(max-width: 600px) calc(100vw - 24px), 1920px" src="/images/uploads/scissors-infographic.png" alt="infographic of the product" loading="lazy" width="800" height="600"/>
+                            </picture>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+            <footer class="container pb-3 pt-5 text-end">
+                <div class="row">
+                    <div class="col text-center text-md-end">
+                        <a href="#" name="anchor" class="pd-section-8-link">Learn why we made Scissors<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"></span></a> 
+                    </div>
+                </div>
+            </footer>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-9</p>
+            </div>
+        </section>
         <script src="assets/js/popper.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
     </body>
