--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -303,7 +303,7 @@
             </div>
             <div class="container pb-4 pt-4">
                 <div class="row">
-                    <div class="col">
+                    <div class="align-items-center col d-flex flex-column justify-content-start">
                         <div class="align-items-center d-flex flex-column justify-content-start pd-section-8-image-wrapper pe-0 pe-lg-5 ps-0 ps-lg-5">
                             <picture>
                                 <source srcset="/images/uploads/scissors-infographic.webp 1920w, 
@@ -326,6 +326,36 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-9</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-section-9 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="align-items-center col-lg-8 d-lg-flex flex-column justify-content-start order-2 order-lg-1">
+                        <div class="pd-section-9-image-wrapper">
+                            <picture>
+                                <source srcset="/images/uploads/scissors-infographic.webp 1920w, 
+                                            /images/uploads/scissors-infographic-mob.webp 820w" sizes="(max-width: 600px) calc(100vw - 24px), 1920px" type="image/webp">
+                                <img srcset="/images/uploads/scissors-infographic.png 1920w,
+                                        /images/uploads/scissors-infographic-mob.png 820w" sizes="(max-width: 600px) calc(100vw - 24px), 1920px" src="/images/uploads/scissors-infographic.png" alt="infographic of the product" loading="lazy" width="800" height="600"/>
+                            </picture>
+                        </div>
+                    </div>
+                    <div class="align-items-lg-start col-lg-4 d-lg-flex flex-lg-column justify-content-lg-center order-1 order-lg-2 pt-5 pt-lg-0">
+                        <h2>Why we made scissors</h2>
+                        <div class="pd-section-9-headline">
+                            <p><strong>Scissors was built to bring people together</strong></p>
+                        </div>
+                        <div class="pd-section-9-subHeadline">
+                            <p>Etiam ullamcorper, lacus sit amet consequat pulvinar, dolor mi accumsan risus, venenatis fringilla metus dui vitae magna.&nbsp;</p>
+                        </div>                                                  
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-10</p>
             </div>
         </section>
         <script src="assets/js/popper.min.js"></script>
