Added new one image sections for scissors

--- a/_factory_logo_strips.html
+++ b/_factory_logo_strips.html
@@ -25,7 +25,7 @@
                     <div class="col text-center">
                         <h2>Customers</h2>
                         <div class="pd-logo-strip-1-subHeadline">
-                            <p>Proud to have worked with:</p>
+                            <p>Proud to work with:</p>
                         </div>                         
                     </div>
                 </div>
