Added new section with full size mobile

--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -138,7 +138,7 @@
                         <div class="pd-section-3-image-outer">
                             <picture>
                                 <source srcset="/images/uploads/section-example-1.webp" type="image/webp">
-                                <img src="images/uploads/section-example-1.jpg" width="200" height="400" alt="image of app" loading="lazy">
+                                <img src="images/uploads/section-example-1.png" width="200" height="400" alt="image of app" loading="lazy">
                             </picture>
                         </div>                         
                     </article>
@@ -168,7 +168,7 @@
                         <div class="pd-section-4-image-outer">
                             <picture>
                                 <source srcset="/images/uploads/section-example-2.webp" type="image/webp">
-                                <img src="/images/uploads/section-example-2.jpg" width="200" height="400" alt="image of app" loading="lazy">
+                                <img src="/images/uploads/section-example-2.png" width="200" height="400" alt="image of app" loading="lazy">
                             </picture>
                         </div>                         
                     </article>
@@ -197,6 +197,7 @@
                     <article class="align-items-center col-lg-4 d-flex flex-column justify-content-start order-2 order-lg-1" style="position: relative;">
                         <div class="pd-section-5-image-outer">
                             <picture>
+                                <source srcset="/images/uploads/section-example-3.webp" type="image/webp">
                                 <img src="/images/uploads/section-example-3.png" width="200" height="400" alt="image of app" loading="lazy">
                             </picture>
                         </div>                         
@@ -226,6 +227,7 @@
                     <article class="align-items-center col-lg-4 d-flex flex-column justify-content-start order-2 order-lg-1" style="position: relative;">
                         <div class="pd-section-6-image-outer">
                             <picture>
+                                <source srcset="/images/uploads/section-example-3.webp" type="image/webp">
                                 <img src="/images/uploads/section-example-3.png" width="200" height="400" alt="image of app" loading="lazy">
                             </picture>
                         </div>                         
@@ -264,6 +266,7 @@
                     <article class="align-items-center col-lg-4 d-flex flex-column justify-content-start order-2 order-lg-1" style="position: relative;">
                         <div class="pd-section-7-image-outer">
                             <picture>
+                                <source srcset="/images/uploads/section-example-3.webp" type="image/webp">
                                 <img src="/images/uploads/section-example-3.png" width="200" height="400" alt="image of app" loading="lazy">
                             </picture>
                         </div>                         
@@ -350,7 +353,7 @@
                             <div class="pd-section-9-subHeadline">
                                 <p>Etiam ullamcorper, lacus sit amet consequat pulvinar, dolor mi accumsan risus, venenatis fringilla metus dui vitae magna.&nbsp;</p>
                             </div>
-                        </header>                                                  
+                        </header>                         
                     </div>
                 </div>
             </div>
@@ -389,7 +392,7 @@
                                     <li>Sub Feature 3&nbsp;</li>                                     
                                 </ul>
                             </div>
-                        </header>                                                  
+                        </header>                         
                     </div>
                 </div>
             </div>
@@ -397,6 +400,43 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-11</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-section-11 pt-5">
+            <div class="container">
+                <div class="row">
+                    <article class="col-lg-6 col-md-5">
+                        <div class="pd-section-11-image-outer">
+                            <picture>
+                                <source srcset="/images/uploads/section-example-2.webp" type="image/webp">
+                                <img src="images/uploads/section-example-2.png" width="200" height="400" alt="image of app" loading="lazy">
+                            </picture>
+                        </div>                         
+                    </article>
+                    <article class="col-lg-6 col-md-7 d-flex flex-column justify-content-center p-4">
+                        <header>
+                            <h2>Feature 1</h2>
+                            <div class="pd-section-11-headline">
+                                <p><strong>Donec ut diam et enim feugiat posuere. Vivamus arcu lacus</strong></p>
+                            </div>
+                        </header>                         
+                        <div class="pd-section-11-para">
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        </div>
+                        <div style="position: relative;" class="d-flex flex-row justify-content-center justify-content-md-start">
+                            <ul class="align-items-start d-flex flex-column justify-content-start"> 
+                                <li>Sub Feature 1</li>                                 
+                                <li>Sub Feature 2</li>                                 
+                                <li>Sub Feature 3&nbsp;</li>                                 
+                            </ul>
+                        </div>                         
+                    </article>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-12</p>
             </div>
         </section>
         <script src="assets/js/popper.min.js"></script>
