--- a/_factory_heroVideos.html
+++ b/_factory_heroVideos.html
@@ -15,7 +15,7 @@
     <body style="position: relative;">
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
-                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-video-1</p>
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-video-1 (see settings on this video for playing on apple devices, i.e. autoplay, muted, playsinline, preload="metadata")</p>
             </div>
         </section>
         <section class="pb-5 pd-hero-video-1 pt-5">
@@ -148,7 +148,7 @@
         </section>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
-                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-video-5</p>
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-video-5 (requires functions-modals.js, set data-modal-id on the main button and close button on modal, give this id to the modal window)</p>
             </div>
         </section>
         <section class="pb-5 pd-hero-video-5 pt-5">
@@ -168,14 +168,14 @@
                             <img alt="image of office working using scissors software" width="400" height="400" class="img-fluid" src="images/uploads/hero-automation.svg">
                         </div>
                         <div style="position: absolute;" class="pd-hero-video-5-play-outer">
-                            <a href="#" name="anchor" style="display: inline-block;" class="pd-hero-video-5-modal-link"><img src="images/design-assets/play-info.svg" alt="play icon" width="120" height="120"></a>
+                            <a href="#" name="anchor" style="display: inline-block;" class="pd-hero-video-5-modal-link" data-modal-id="modal5"><img src="images/design-assets/play-info.svg" alt="play icon" width="120" height="120"></a>
                         </div>                         
                     </div>
                 </div>
             </div>
         </section>
-        <div class="pd-hero-video-5-modal">
-            <span><a name="anchor" href="#" class="pd-hero-video-5-close">Close<img src="images/design-assets/icon-close.svg" alt="icon for closing window" width="40" height="40"></a></span>
+        <div class="pd-hero-video-5-modal" id="modal5">
+            <span><a name="anchor" href="#" class="pd-hero-video-5-close" data-modal-id="modal5">Close<img src="images/design-assets/icon-close.svg" alt="icon for closing window" width="40" height="40"></a></span>
             <div class="pd-hero-video-5-modal-video-outer">
                 <video preload="none" controls width="750px">
                     <source src="/assets/movies/file.mp4" type="video/webm"/>
@@ -186,7 +186,55 @@
         </div>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
-                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-video-6</p>
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-video-6 (requires functions-modals.js, set data-modal-id on the main button and close button on modal, give this id to the modal window)</p>
+            </div>
+        </section>
+        <section class="pd-hero-video-6">
+            <script>
+                function imageLoadedListener6(e) {
+                    const heroImage6 = document.querySelector(".pd-hero-video-6-image");
+                    heroImage6.classList.add("pd-hero-video-image-6-loaded");
+                }
+            </script>
+            <picture>
+                <source srcset="/images/uploads/hero-scissors-people-working.webp 1800w, 
+                                /images/uploads/hero-scissors-people-working-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp">
+                <img srcset="/images/uploads/hero-scissors-people-working.jpg 1800w,
+                            /images/uploads/hero-scissors-people-working-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-scissors-people-working.jpg" class="pd-hero-video-6-image" onload="imageLoadedListener6()"/>
+            </picture>
+            <div class="pd-hero-video-6-image-overlay"></div>
+            <div class="container flex-grow-1 flex-shrink-0" style="padding-top: 9rem; padding-bottom: 9rem; position: relative;">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div>
+                            <header>
+                                <h1>Recruitment Software</h1>
+                                <p class="pd-hero-video-6-headline">Find out how our innovative software works</p>
+                            </header>
+                            <p class="pd-hero-video-6-subHeadline">Take a video tour of the Scissors app.</p>
+                        </div>
+                        <footer>
+                            <div class="pd-hero-video-6-play-outer">
+                                <a href="#" name="anchor" class="pd-hero-video-6-modal-link" data-modal-id="modal6"><img src="images/design-assets/play-white.svg" alt="play icon" width="100" height="100"></a>
+                            </div>
+                        </footer>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="pd-hero-video-6-modal" id="modal6">
+            <span><a name="anchor" href="#" class="pd-hero-video-6-close" data-modal-id="modal6">Close<img src="images/design-assets/icon-close.svg" alt="icon for closing window" width="40" height="40"></a></span>
+            <div class="pd-hero-video-6-modal-video-outer">
+                <video preload="none" controls width="750px">
+                    <source src="/assets/movies/file.mp4" type="video/webm"/>
+                    <source src="/assets/movies/file.mp4" type="video/mp4"/>
+                    Sorry, your browser doesn't support embedded videos.
+                </video>
+            </div>
+        </div>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-video-7</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
